--- a/src/components/form/Form.scss
+++ b/src/components/form/Form.scss
@@ -24,7 +24,7 @@ td {
     height: 40px;
     background-color: #ededed;
     border: none;
-    color: #505050;
+    color: $secondary;
     font-weight: 500;
     padding: 10px 16px;
     text-align: center;
@@ -34,6 +34,15 @@ td {
     margin: 4px 2px;
     cursor: pointer;
     margin-right: 16px;
+
+    &.cancel-button {
+      color: #07f;
+    }
+
+    &.save-button {
+      background-color: #07f;
+      color: white;
+    }
   }
 }
 .error-message {
