--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -1,13 +1,10 @@
 $main: #757575;
 $secondary: #505050;
+$button: #07f;
 
 table {
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 5px;
   height: 100%;
-
-  tbody tr {
-    height: 72px;
-  }
 }
